fixed server skills bar length on iPhone Plus models and s8+

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -688,7 +688,7 @@ pre code {
  }
 }
 
-@media only screen and (max-width: 800px) and (min-width: 600px) {
+@media (max-width: 800px) and (min-width: 600px) {
  .server {
  width: 79%;
  }
